[project]
name = "wizit-context-ingestor-open"
version = "0.1.0"
description = "Contextual Rag with Cloud Solutions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.23",
    "langchain-aws>=0.2.31",
    "langchain-experimental>=0.3.4",
    "langchain-google-vertexai>=2.0.28",
    "langchain-redis>=0.2.3",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
